Update app.py, admin.html, and add create_db.py

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -9,20 +9,23 @@
     <h2 style="text-align:center;">Registered Users</h2>
 
     <table border="1" cellpadding="10" cellspacing="0" align="center">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Email</th>
-        </tr>
+    <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Registered At</th>   <!-- NEW -->
+    </tr>
 
-        {% for user in users %}
-        <tr>
-            <td>{{ user.id }}</td>
-            <td>{{ user.name }}</td>
-            <td>{{ user.email }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    {% for user in users %}
+    <tr>
+        <td>{{ user.id }}</td>
+        <td>{{ user.name }}</td>
+        <td>{{ user.email }}</td>
+        <td>{{ user.created_at }}</td>  <!-- NEW -->
+    </tr>
+    {% endfor %}
+</table>
+
 
 </body>
 </html>
