--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -7,6 +7,12 @@
 <body>
 
 <h1>Registered Users</h1>
+<div style="margin-bottom: 20px;">
+    <a href="/download/users">
+        <button>⬇ Download Registered Users (CSV)</button>
+    </a>
+</div>
+
 
 <!-- TOP BLOCKS -->
 <div class="cards">
