--- a/templates/auth.html
+++ b/templates/auth.html
@@ -21,6 +21,9 @@
 
         <button type="submit">Login</button>
     </form>
+    <p style="margin-top:10px;">
+        <a href="/forgot-password">Forgot Password?</a>
+    </p>
 
     {% if login_error %}
         <p style="color:red;">{{ login_error }}</p>
