--- a/templates/admin_donations.html
+++ b/templates/admin_donations.html
@@ -61,7 +61,7 @@
             <td>{{ d.email }}</td>
             <td>₹ {{ d.amount }}</td>
             <td>{{ d.status }}</td>
-            <td>{{ d.date }}</td>
+            <td>{{ d.created_at }}</td>
         </tr>
         {% endfor %}
     </tbody>
