changed pendig and t

--- a/Static/Style.css
+++ b/Static/Style.css
@@ -38,3 +38,36 @@ button:hover {
     font-weight: bold;
     margin: 10px;
 }
+
+.history-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+.history-table th,
+.history-table td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: center;
+}
+
+.history-table th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.history-table tr:nth-child(even) {
+    background-color: #fafafa;
+}
+
+.history-table tr:hover {
+    background-color: #f1f1f1;
+}
+
+.history-box {
+    width: 90%;
+    max-width: 1100px;
+}
+
+
