--- a/templates/history.html
+++ b/templates/history.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 
-<div class="box">
+<div class="box history-box">
     <h2>Your Donation History</h2>
 
     {% if donations %}
-    <table border="1" cellpadding="10" cellspacing="0" width="100%">
+    <table class="history-table">
         <tr>
+            <th>S.No</th>
             <th>Amount (₹)</th>
             <th>Status</th>
             <th>Date</th>
@@ -19,6 +20,7 @@
 
         {% for d in donations %}
         <tr>
+            <td>{{ loop.index }}</td>
             <td>{{ d.amount }}</td>
             <td>{{ d.status }}</td>
             <td>{{ d.created_at }}</td>
@@ -30,5 +32,7 @@
     {% endif %}
 </div>
 
+
 </body>
 </html>
+
