--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -16,13 +16,13 @@
 
 
 <!-- TOP BLOCKS -->
-<div class="cards">
-    <div class="card">
+<div class="cardnew">
+    <div class="cardn">
         <h3>Total Registrations</h3>
         <p>{{ total_users }}</p>
     </div>
 
-    <div class="card">
+    <div class="cardn">
         <h3>Today's Registrations</h3>
         <p>{{ today_users }}</p>
     </div>
