--- a/templates/register_success.html
+++ b/templates/register_success.html
@@ -4,20 +4,33 @@
     <title>Registration Successful</title>
     <style>
         body {
+            background-image: 
+        linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+        url("/static/images/poverty.jpeg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
             font-family: Arial, sans-serif;
-            background: #f4f6f8;
+           
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
         }
+        
         .box {
-            background: white;
-            padding: 40px;
-            border-radius: 12px;
-            text-align: center;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-        }
+            background: rgba(0, 0, 0, 0.65);   /* dark transparent */
+            padding: 45px 60px;
+            border-radius: 14px;
+            box-shadow: 0 15px 35px rgba(0,0,0,0.5);
+            backdrop-filter: blur(6px);
+
+            width: 520px;      /* makes box look bigger */
+            color: white;      /* text white */
+}
+
+        
         .check {
             font-size: 50px;
             color: green;
