--- a/templates/auth.html
+++ b/templates/auth.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <a href="#" class="contact-btn">Contact Us</a>
+    <a href="#" class="contact-btn">📞 +91 98765 43210</a>
 
 </div>
 
